--- a/index.html
+++ b/index.html
@@ -24,6 +24,45 @@
         <p>แลกเปลี่ยนเงินง่าย รวดเร็ว ปลอดภัย</p>
     </section>
 
+    <!-- เพิ่มส่วนอัตราแลกเปลี่ยน -->
+    <section class="exchange-rates">
+        <div class="currency-card">
+            <img src="https://flagcdn.com/w320/my.png" alt="Malaysia Flag">
+            <div class="currency-info">
+                <h2>MYR</h2>
+                <p>Malaysia</p>
+            </div>
+            <div class="rate">
+                <div class="buying">
+                    <p>BUYING</p>
+                    <span>7.60</span>
+                </div>
+                <div class="selling">
+                    <p>SELLING</p>
+                    <span>7.65</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="currency-card">
+            <img src="https://flagcdn.com/w320/us.png" alt="USA Flag">
+            <div class="currency-info">
+                <h2>USD</h2>
+                <p>United States</p>
+            </div>
+            <div class="rate">
+                <div class="buying">
+                    <p>BUYING</p>
+                    <span>34.50</span>
+                </div>
+                <div class="selling">
+                    <p>SELLING</p>
+                    <span>35.10</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <p>© 2025 PS Money Exchange. All rights reserved.</p>
     </footer>
